src/objects/Apttus_Revenue2__RevenueRunResult__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Revenue2__JobType__c</fullName>
        <description>The type of the batch job that was executed.</description>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generate Actuals,</fullName>
                </value>
                <value>
                    <fullName>Generate Forecasts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__RevenueRunId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>A reference to the Revenue Run used to generate this result.</description>
        <label>Revenue Run</label>
        <referenceTo>Apttus_Revenue2__RevenueRun__c</referenceTo>
        <relationshipLabel>Revenue Run Results</relationshipLabel>
        <relationshipName>RevenueRunResults</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__ScheduledJobId__c</fullName>
        <description>The job Id of the associated Scheduled Job.</description>
        <label>Scheduled Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Status__c</fullName>
        <description>The status of the revenue run result.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>In Process,</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__TotalAgreementsProcessed__c</fullName>
        <description>The total number of Agreements processed during the run.</description>
        <label>Total Agreements Processed</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__TotalSchedulesCreated__c</fullName>
        <description>The total number of Schedules created during the run.</description>
        <label>Total Schedules Created</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Revenue Run Result</label>
    <nameField>
        <label>Revenue Run Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Run Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>